lab1/Test/L1-A-8-6.output
Error Type B at Line 7
Error Type B at Line 20
Error Type B at Line 25
Error Type B at Line 30
Error Type B at Line 33
