lab1/Test/L1-A-8-6.cmm
int pV5Pc [ 1246380303 ] 
;
struct qSLRfPts1ja {
}CMboNNjA1K3sLhpyu ( ) {
  float zIZNHQs7 = p6Y , N8OkXrWJFOjSo ;
  xBrAEAO = mbaTw9_ || IgWB95fIV == tjbsDmVsN4f - 
    _n8z0Xuv8 * ! uWpMUWpg06rQexX ( zUV0j5JiPO8BfE <= 
    && jtHOLigaA0QI6A >= n + Cohq0b3dfRCwixO7UjF [ udlaOE1dUEUBEqaFv 
    && eYdD > ! ( Kwf19X5uh3x6 = H6ZLXvK || M34oXLtbdYES_csWd 
    != nxar9gI8yBlo86Ms * ( umPXfhIZ + - QbsS3JaxacJAWU51 
    [ wDnIQas0_BoyO && - BxSxgafmO ( TJBszu , YnnF ) . 
    kpAX4sx0o264iGr / - Xl3lqu7hP6 ] ) * ! rllX . rSoariB8XnNQ3 
    ) / ! ( ! ! 2079220363 ) <= 1076511279.1939552175 
    ] ) . Il8TOVzw / - ! bL1FwVThpxhqeX ( ) < ! - u0JGbJ2asn 
    ;
}
struct BU5zqIo9KTRu2gCQ ;
struct {
  struct si8RDDJNpmpn9wI9v P ;
== };
int ;
int ;
int pZiZAHAXQucsNU , ZLklNBo3Va5dU 

!= ;
int ;
int ;
int ;
int ;
int ehB ( int ximN96E , int FXdCp_vbAhBKS ) 437439189 
  {
}
int nB ( != int RSgpAPV_7VVyq4Yc ) {
  if ( BAsa6BIkCX2WKOs1Q2 )   Ek5J4EYvIkqDb2 ;
else   if ( xgDg )   if ( FsDmPDrENGuEzLlVW )   wg 
    ;
else   while ( iUlDPdzuKCm467n0 ) {
    return paJUBbTfOSanrFrUx ;
  }



}
